2011-07-18  Alan Mackenzie  <acm@muc.de>

	Fontify declarators properly when, e.g., a jit-lock chunk begins
	inside a declaration.

	* progmodes/cc-langs.el (c-symbol-chars): Correct a typo.

	* progmodes/cc-fonts.el (c-font-lock-enclosing-decls): New
	function.
	(c-complex-decl-matchers): Insert reference to
	c-font-lock-enclosing-decls.

	* progmodes/cc-engine.el (c-backward-single-comment):
	(c-backward-comments): Bind open-paren-in-column-0-is-defun-start
	to nil around calls to (forward-comment -1).

2011-07-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.el (put-image): Doc typo fix.

	* progmodes/etags.el (tags-search): Doc typo fix.

	* mail/smtpmail.el (smtpmail-via-smtp): Query the user for
	password if we get errors 550 to 554.

2011-07-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/gnutls.el (gnutls-log-level): Removed.

	* textmodes/fill.el (adaptive-fill-regexp): Include EN DASH as an
	indentation character (bug#6380).

	* files.el (buffer-offer-save): Made permanently local (bug#6241).

	* doc-view.el (doc-view-make-safe-dir): Rewrite the error message
	to clarify what the problem is (bug#4291).

	* simple.el (current-kill): Clarify what
	`interprogram-paste-function' does (bug#7500).
	(auto-fill-mode): Document `auto-fill-function' in relation to
	`auto-fill-mode' (bug#2470).

2011-07-16  Lawrence Mitchell  <wence@gmx.li>

	* emacs-lisp/cl-macs.el (defstruct): Ignore argument to setf
	method if slot is read-only (bug#9035).

2011-07-16  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (select-frame-set-input-focus): New argument
	NORECORD.
	* window.el (pop-to-buffer): Select window used even if it was
	selected before, see discussion of (Bug#8615), (Bug#6954).  Pass
	argument NORECORD on to select-frame-set-input-focus.

2011-07-15  Glenn Morris  <rgm@gnu.org>

	* subr.el (read-char-choice): Allow quitting.  (Bug#9001)
	Respect help-form.

2011-07-09  Lawrence Mitchell  <wence@gmx.li>
